--- a/src/web/auth/login-test.html
+++ b/src/web/auth/login-test.html
@@ -1,1 +1,59 @@
-#
+i
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Blensy Auth Test - Local Environment</title>
+    <!-- Firebase UI -->
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+</head>
+<body>
+    <h2>Blensy Auth Test - Local Environment</h2>
+    <div id="firebaseui-auth-container"></div>
+    <div id="user-signed-in" style="display:none">
+        <p>User is signed in!</p>
+        <pre id="user-details"></pre>
+        <button id="sign-out">Sign Out</button>
+    </div>
+
+    <script type="module">
+        // Import config
+        import { firebaseConfig } from '.config.js';
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+        // Configure FirebaseUI
+        const uiConfig = {
+            signInOptions: [
+                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                firebase.auth.EmailAuthProvider.PROVIDER_ID
+            ],
+            signInSuccessUrl: 'http://my.blensy.app:8080/auth/callback',
+            callbacks: {
+                signInSuccessWithAuthResult: function(authResult, redirectUrl) {
+                    document.getElementById('user-signed-in').style.display = 'block';
+                    document.getElementById('user-details').textContent = 
+                        JSON.stringify(authResult.user, null, 2);
+                    return false;
+                }
+            }
+        };
+
+        // Initialize UI
+        const ui = new firebaseui.auth.AuthUI(firebase.auth());
+        ui.start('#firebaseui-auth-container', uiConfig);
+
+        // Sign out handler
+        document.getElementById('sign-out').addEventListener('click', () => {
+            firebase.auth().signOut();
+            document.getElementById('user-signed-in').style.display = 'none';
+            document.getElementById('user-details').textContent = '';
+            ui.start('#firebaseui-auth-container', uiConfig);
+        });
+    </script>
+</body>
+</html>
