adding login capabilities

--- a/src/web/auth/login-test.html
+++ b/src/web/auth/login-test.html
@@ -1,4 +1,3 @@
-i
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,7 +20,7 @@ i
 
     <script type="module">
         // Import config
-        import { firebaseConfig } from '.config.js';
+        import { firebaseConfig } from './.config.js';
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
