--- a/src/web/auth/login-test.html
+++ b/src/web/auth/login-test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Blensy Auth Test 001 - Local</title>
+    <title>Blensy Auth: Test 001 - Local</title>
     <!-- Firebase UI -->
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
